# snoopy-console

./: CMakeLists.txt  README.md  main.c
assets/: menu.txt  sources.txt
assets/ASCII/: charger_partie.txt  coeur.txt  defaite.txt  logo.txt  nouvelle_partie.txt  quitter.txt  recommence.txt  regles.txt  victoire.txt
assets/niveaux/: 1.txt  2.txt  3.txt  4.txt  6.txt
assets/sauvegardes/: 1.txt  aze.txt  niveau.txt  premiere.txt  sauvegarde_temporaire.txt  test.txt
src/chrono/: chrono.c  chrono.h
src/deplacements/: commandes.c  commandes.h  deplacements.c  deplacements.h
src/menu/: menu.c  menu.h
src/niveau/: niveau.c  niveau.h
src/partie/: partie.c  partie.h
src/sauvegardes/: sauvegardes.c  sauvegardes.h
src/tools/: tools.c  tools.h
